--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -15,4 +15,6 @@ dependencies {
      * Other Modules
      */
     implementation project(':FtcRobotController')
+
+    implementation 'org.openftc:rev-extensions-2:1.2'
 }
