--- a/build.common.gradle
+++ b/build.common.gradle
@@ -109,4 +109,10 @@ repositories {
         dirs rootProject.file('libs')
     }
 }
+
+allprojects {
+    repositories {
+        jcenter()
+    }
+}
 //apply from: 'build.release.gradle'
