--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -10,6 +10,7 @@
 // Custom definitions may go here
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+apply plugin: 'kotlin-android'
 repositories {
     mavenCentral()
 }
@@ -34,4 +35,5 @@ dependencies {
     testImplementation "com.google.truth:truth:1.0"
     testImplementation group: 'org.json', name: 'json', version: '20180813'
     //testImplementation 'org.mockito:mockito-core:1.10.19'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
