--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -13,6 +13,7 @@ apply from: '../build.common.gradle'
 repositories {
     mavenCentral()
 }
+
 dependencies {
     /*
      * Other Modules
@@ -20,4 +21,6 @@ dependencies {
     implementation project(':FtcRobotController')
 
     implementation 'org.openftc:easyopencv:1.4.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.0'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.3.8'
 }
