--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /build
 /captures
 .externalNativeBuild
+
+/TeamCode/TestData/**/*.xlsx
+/TeamCode/TestData/**/*.csv
+/TeamCode/TestData/openCV_output/*
