--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -27,7 +27,8 @@ dependencies {
     implementation 'com.acmerobotics.dashboard:dashboard:0.3.8'
     implementation group: 'org.json', name: 'json', version: '20180813'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
-    //implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Testing
     implementation 'com.android.support:support-v4:28.0.0'
@@ -35,5 +36,4 @@ dependencies {
     testImplementation "com.google.truth:truth:1.0"
     testImplementation group: 'org.json', name: 'json', version: '20180813'
     //testImplementation 'org.mockito:mockito-core:1.10.19'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
