--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation project(':FtcRobotController')
 
     // Add On Libraries
-    implementation 'org.openftc:easyopencv:1.4.1'
+    api 'org.openftc:easyopencv:1.4.1'
     implementation 'com.acmerobotics.roadrunner:core:0.5.0'
     implementation 'com.acmerobotics.dashboard:dashboard:0.3.8'
     implementation group: 'org.json', name: 'json', version: '20180813'
