--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -24,7 +24,9 @@ dependencies {
     // Add On Libraries
     api 'org.openftc:easyopencv:1.4.1'
     implementation 'com.acmerobotics.roadrunner:core:0.5.3'
-    implementation 'com.acmerobotics.dashboard:dashboard:0.3.8'
+    implementation('com.acmerobotics.dashboard:dashboard:0.4.0') {
+        exclude group: 'org.firstinspires.ftc'
+    }
     implementation group: 'org.json', name: 'json', version: '20180813'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
