--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation group:'org.yaml', name: 'snakeyaml', version: '1.21' // name or artifactId ?
+    implementation group:'com.opencsv', name: 'opencsv', version: '5.3'
 
     // Testing
     implementation 'com.android.support:support-v4:28.0.0'
